Bug 1602689 - whitelist RegisteredThread::RegisteredThread r=decoder,gerald

Changes:

Whitelist the `RegisteredThread::RegisteredThread` failures for linux1804-64-asan/opt temporarily while the parent bug is left open, to support `mochitest-browser-chrome` migration to linux1804-64.

Differential Revision: https://phabricator.services.mozilla.com/D61224

--HG--
extra : moz-landing-system : lando